@@ -24,7 +24,8 @@ Imports:
 Suggests:
     doBy,
     car,
-    lmtest
+    lmtest,
+    mitools
 Enhances: reshape
 Description: An R command interface to the 'MLwiN' multilevel
     modelling software package.
@@ -32,4 +33,4 @@ License: GPL (>= 2)
 URL: http://www.bristol.ac.uk/cmm/software/r2mlwin/,https://r-forge.r-
     project.org/projects/r2mlwin/,http://www.bristol.ac.uk/cmm/software/mlwin/
 SystemRequirements: MLwiN, (OpenBUGS, WinBUGS optional)
-RoxygenNote: 5.0.0
+RoxygenNote: 5.0.1
