@@ -18,11 +18,9 @@ Allow user specified design matrix (IGLS) - SETD command
 Multinomial proportions - need manual calculation/reshaping
 Add an option to allow the model to be set up but not run, useful for example if we just want to run a BUGS model or see the MLwiN syntax
 Add more error checking
-Automate multiple imputation (maybe using mi package)
 Allow display of models results in alternative measures (e.g. correlations, standard deviations, etc)
 Investigate interactions with RStudio, as sometimes graphs can behave strangely
 Add option to omit data from output objects, as well as modify postestimation functions to take this into account
 Include information about missing data in hierachy slot
 Link to the texreg package to allow prettier table outputs
 Store and display information regarding the Priors in the MCMC output
-Allow changing the default Gamma prior parameters
