@@ -1,3 +1,7 @@
+Wed Dec 16 2015
+1. Changes
+   * Return imputed datasets as a list of dataframes (in the imputations slot). This matches the input required by the mitools package.
+
 Tue Dec 15 2015
 1. Bug fixing
    * Ignore missing values when checking that responses have valid values
